# BFN

./: BFN_Experiment.ipynb  README.md  example_data.py  pyproject.toml  test_categorical.py  test_example_data.py  test_training.py  train_and_sample.py  training.py
bfn/: models.py  train_and_sample.py  training.py  visualising_flows.py
bfn/continuous/: __init__.py  example_data.py  loss_and_sample.py  models.py  models_mnist.py  models_simple.py  training.py  visualising_flows.py
bfn/discrete/: __init__.py  loss_and_sample.py  models.py  train_and_sample.py  training.py  visualising_flows.py
examples/: Continuous_BFN_Training.ipynb  Continuous_MNIST_Training.ipynb  Discrete_BFN_Training.ipynb  Visualising_Continuous_Flow.ipynb
tests/: test_categorical.py  test_example_data.py  test_training.py
tests/continuous/: test_continuous_distribution.py
tests/discrete/: test_categorical.py  test_example_data.py  test_training.py
